--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.5.2
   google_sign_in: ^6.3.0
   flutter_riverpod: ^2.6.1
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
