--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_sign_in: ^6.3.0
   flutter_riverpod: ^2.6.1
   logger: ^2.5.0
+  fpdart: ^1.1.1
+  routemaster: ^1.0.1
 
 dev_dependencies:
   flutter_test:
