--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   logger: ^2.5.0
   fpdart: ^1.1.1
   routemaster: ^1.0.1
+  dotted_border: ^2.1.0
+  file_picker: ^10.1.2
+  path_provider: ^2.0.15
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
