--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logo.jpg
+    - assets/images/logo.png
     - assets/images/login_emote.jpg
     - assets/images/google.png
     - assets/images/awards/
