--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,10 @@ flutter:
     - assets/images/login_emote.jpg
     - assets/images/google.png
     - assets/images/awards/
+    - assets/images/app_logo.jpg
+    - assets/images/image_card.png
+    - assets/images/link_card.png
+    - assets/images/text_card.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
