--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path: ^1.8.2
   uuid: ^4.5.1
   any_link_preview: ^3.0.3
+  flutterfire_cli: ^1.3.1
 
 dev_dependencies:
   flutter_test:
